[package]
name = "blam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.29.0"
directories = "6.0.0"
mdns-sd = "0.17.2"
ratatui = "0.30.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
